--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -2,15 +2,15 @@
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "lint": "eslint src",
-    "lintFix": "eslint . --fix"
+    "lint": "eslint . --ext .tsx --ext .ts",
+    "lint-fix": "eslint . --ext .tsx --ext .ts --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -29,6 +30,7 @@
     "@vitest/coverage-c8": "^0.29.2",
     "axios": "^1.3.4",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
@@ -40,6 +42,6 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-checker": "^0.5.6",
-    "vitest": "^0.29.2"
+    "vitest": "^0.29.7"
   }
 }
