--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -20,6 +20,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
