--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
     "uuid": "^9.0.0"
   },
@@ -31,7 +32,7 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "eslint-config-prettier": "^8.7.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
