--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -13,10 +13,12 @@
     "lint-fix": "eslint . --ext .tsx --ext .ts --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "uuid": "^9.0.0"
   },
