--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@hookform/error-message": "^2.0.1",
