--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -14,13 +14,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^5.3.4",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
-    "uuid": "^9.0.0"
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@hookform/error-message": "^2.0.1",
@@ -32,6 +28,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
     "axios": "^1.3.5",
@@ -46,9 +43,12 @@
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
     "react-hook-form": "^7.43.8",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-checker": "^0.5.6",
-    "vitest": "^0.29.7"
+    "vitest": "^0.29.7",
+    "uuid": "^9.0.0"
   }
 }
